--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <div class="inner">
       <nav class="b-navigation">
         {% for nav in site.navigation %}
-          <a href="{{nav.url}}" class="b-navigation__item">{{nav.title}}</a>
+        <a href="{{nav.url}}" class="b-navigation__item">{{nav.title}}</a>
         {% endfor %}
       </nav>
       <!-- /.b-navigation -->
@@ -17,5 +17,24 @@
     <!-- /.inner -->
   </div>
   <!-- /.wrapper -->
+  <div class="wrapper">
+    <div class="inner">
+      <div class="b-header">
+        <div class="b-logo">
+          <a href="{{site.baseurl}}" class="b-logo__link">
+            <h1 class="b-logo__title">
+              <img src="{{site.baseurl}}img/logo.png" alt="" class="b-logo__img">
+            </h1>
+            <!--b-logo__title -->
+          </a>
+          <!--b-logo__link -->
+        </div>
+        <!--b-logo -->
+      </div>
+      <!-- b-header -->
+    </div>
+    <!-- inner -->
+  </div>
+  <!-- wrapper -->
 </body>
 </html>
