--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+  <link rel="shortcut icon" type="image/x-icon" href="{{site.baseurl}}favicon.ico">
   <meta charset="UTF-8">  
-  <title>{{site.title}}</title>
-  
+  <title>{% if page.title %}  {{page.title}} {% else %}{{site.title}}{% endif %}</title>
+  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+  <link rel="stylesheet" href="{{site.baseurl}}css/style.css">
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper wrapper_top-bar">
     <div class="inner">
-      <nav class="b-navigation">
-        {% for nav in site.navigation %}
+      <nav class="b-navigation clearfix"> 
+        {% for nav in site.data.navigation %}
         <a href="{{nav.url}}" class="b-navigation__item">{{nav.title}}</a>
         {% endfor %}
       </nav>
@@ -19,10 +20,10 @@
     <!-- /.inner -->
   </div>
   <!-- /.wrapper -->
-  <div class="wrapper">
+  <div class="wrapper wrapper_header wrapper_gray">
     <div class="inner">
       <div class="b-header">
-        <div class="b-logo">
+        <div class="b-logo left">
           <a href="{{site.baseurl}}" class="b-logo__link">
             <h1 class="b-logo__title">
               <img src="{{site.baseurl}}img/logo.png" alt="" class="b-logo__img">
