--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,12 @@
   <link rel="stylesheet" href="{{site.baseurl}}css/style.css">
 </head>
 <body>
+
   <div class="wrapper wrapper_top-bar">
     <div class="inner">
       <nav class="b-navigation clearfix"> 
-        {% for nav in site.data.navigation %}
+
+        {% for nav in site.data.navigation.top-bar %}
         <a href="{{nav.url}}" class="b-navigation__item">{{nav.title}}</a>
         {% endfor %}
       </nav>
@@ -20,10 +22,11 @@
     <!-- /.inner -->
   </div>
   <!-- /.wrapper -->
+
   <div class="wrapper wrapper_header wrapper_gray">
     <div class="inner">
-      <div class="b-header">
-        <div class="b-logo left">
+      <div class="b-header clearfix">
+        <div class="b-logo">
           <a href="{{site.baseurl}}" class="b-logo__link">
             <h1 class="b-logo__title">
               <img src="{{site.baseurl}}img/logo.png" alt="" class="b-logo__img">
@@ -33,11 +36,91 @@
           <!--b-logo__link -->
         </div>
         <!--b-logo -->
+        <div class="b-header-info">
+          <div class="b-phone">
+            <span class="b-phone__text">Звоните в любое время:</span>
+            <span class="b-phone__number">{{site.phone}}</span>
+          </div>
+          <!-- /.b-phone -->
+          <div class="b-online-order">
+            <img src="{{site.baseurl}}img/order.png" alt="" class="b-online-order__img">
+            <a href="{{site.baseurl}}online-order.html" class="b-online-order__link b-button b-button_imaged">online заявка на выкуп автомобиля</a>
+          </div>
+          <!-- /.b-online-order -->
+          <div class="b-call-order">
+            <a href="{{site.baseurl}}call-order.html" class="b-call-order__link b-button b-button_smaller">заказать обратный звонок</a>
+          </div>
+          <!-- /.b-call-order -->
+        </div>
+        <!-- /.b-header-info -->
       </div>
       <!-- b-header -->
     </div>
     <!-- inner -->
   </div>
   <!-- wrapper -->
+
+  <div class="wrapper wrapper_content wrapper_gray">
+    <div class="inner clearfix">
+      <div class="b-content">
+        {{content}}
+        <div class="b-content__bottom">
+          <div class="b-yandex-widget">
+            <div style="overflow: hidden;"><a target="_blank" href="http://www.yandex.ru?add=147940&amp;from=promocode"><img border="0" alt="" src="http://wi.yandex.net/02/41/t-147940.png" style="float: left; padding: 0 10px 10px 0;"></a><br><div style="margin:7px 0 0 160px;">
+              <h3 style="margin-top: 0px;"><a style="color:#000;" target="_blank" href="http://www.yandex.ru?add=147940&amp;from=promocode">Срочный выкуп авто</a></h3>
+              <p>срочный выкуп авто в Москве</p>
+              <p><a href="http://www.yandex.ru?add=147940&amp;from=promocode" target="_blank" style="display: block; margin-top: 0.5em;border:none;"><img border="0" alt="добавить на Яндекс" src="http://img.yandex.net/i/service/wdgt/b-wdgt-add-button_lang_ru.png"></a></p></div>
+            </div>
+          </div>
+          <!-- b-yandex-widger -->
+
+          <div class="b-brands">
+            <a href="" class="b-brands__item"> 
+              <img height="100" src="{{site.baseurl}}img/mercedes-benz-logo_new3.jpg" alt="" class="b-brands__img"> </a>
+              <a href="" class="b-brands__item">
+                <img height="100" src="{{site.baseurl}}img/Chevrolet-Logo.jpg" alt="" class="b-brands__img">
+              </a>
+              <a href="" class="b-brands__item"> 
+               <img height="100" src="{{site.baseurl}}img/bmw.jpg" alt="" class="b-brands__img"> 
+             </a>
+             <a href="" class="b-brands__item"> 
+              <img height="100" src="{{site.baseurl}}img/chrysler_new_logo_sm_07.jpg" alt="" class="b-brands__img">
+            </a>
+            <a href="" class="b-brands__item"> 
+              <img height="100" src="{{site.baseurl}}img/ferrari-logo.jpg" alt="" class="b-brands__img"> 
+            </a>
+            <a href="" class="b-brands__item"> 
+              <img height="100" src="{{site.baseurl}}img/porschelogo.png" alt="" class="b-brands__img"> 
+            </a>
+          </div>
+          <!-- /.b-brands -->
+        </div>
+        <!-- b-content__bottom -->
+      </div>
+      <!-- /.b-content -->
+      <div class="b-sidebar">
+        {% include sidebar.html %}
+      </div>
+      <!-- /.b-sidebar -->
+    </div>
+    <!-- /.inner -->
+  </div>
+  <!-- /.wrapper wrapper_content wrapper_gray -->
+  <div class="wrapper wrapper_footer">
+    <div class="inner ">
+      <div class="b-informer-wrap clearfix">
+        <div class="b-informer b-informer_footer">AVTOVIKUP77.RU</div>
+        <!-- /.b-informer b-informer_footer -->
+        <div class="b-informer b-informer_footer">Тел.: 8-926-06-06-444</div>
+        <!-- /.b-informer b-informer_footer -->
+        <div class="b-informer b-informer_footer">© Срочный выкуп авто в Москве</div>
+        <!-- /.b-informer b-informer_footer -->
+      </div>
+      <!-- /.b-informer-wrap -->
+
+    </div>
+    <!-- /.inner -->
+  </div>
+  <!-- /.wrapper wrapper_footer -->
 </body>
 </html>
